--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,54 +1,17 @@
-{% load static%}
-{% load widget_tweaks %}
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>SB Admin 2 - Register</title>
-
-    <!-- Custom fonts for this template-->
-    <link href="{%static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-
-    <!-- Custom styles for this template-->
-    <link href="{%static 'css/sb-admin-2.min.css'%}" rel="stylesheet">
-
-</head>
-
-<body class="bg-gradient-primary">
-
-    <div class="container">
-
-        <div class="card o-hidden border-0 shadow-lg my-5">
-            <div class="card-body p-0">
-                <!-- Nested Row within Card Body -->
-                <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-                    <div class="col-lg-7">
-                        <div class="p-5">
-                            <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">新しいアカウントの作成</h1>
-                            </div>
-
-
-
-                            <form method="post">
-
-
-                            {% csrf_token %}
+{% extends 'base.html' %}
+{% block title %}Sign up{% endblock %}
+{% block contents %}
+<hr>
+<div class="container">
+    <div class="row">
+        <div class="col offset-2">
+            <h3>サインアップ</h3>
+            <form method="post">
+                {% csrf_token %}
                 {% for field in form %}
                 <p>
                     {{field.label_tag}}<br>
-                    {{ field|add_class:'form-control form-control-user' }}
+                    {{ field }}
                     {% if field.help_text %}
                     <small style="color: grey">{{ field.help_text }}</small>
                     {% endif %}
@@ -60,36 +23,13 @@
                 <p style="color:red">
                     メールアドレスはパスワードをリセットする際に必要になりますので、登録をお願いします。
                 </p>
-
-                            <input type="submit" value="Sign up">
-                        </form>
-
-                            </form>
-                            <hr>
-                            <div class="text-center">
-                                <a class="small" href="forgot-password.html">パスワードを忘れた</a>
-                            </div>
-                            <div class="text-center">
-                                <a class="small" href="{% url 'accounts:login'%}">アカウントにログイン</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                <input type="submit" value="Sign up">
+            </form>
+            <br>
+            <p><a href="{%url 'Twitchapp:index' %}">
+                    登録をやめてトップページに戻る</a>
+            </p>
         </div>
-
     </div>
-
-    <!-- Bootstrap core JavaScript-->
-    <script src="{%static 'vendor/jquery/jquery.min.js'%}"></script>
-    <script src="{%static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="{%static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="{%static 'js/sb-admin-2.min.js'%}"></script>
-
-</body>
-
-</html>
+</div>
+{% endblock %}
